--- a/config/settings.default.yml
+++ b/config/settings.default.yml
@@ -212,31 +212,31 @@
   :icon: :fa-check-square-o
   :url:
     :controller: tasks
-- :active: false
-  :text: :tab_campaigns
-  :icon: :fa-bar-chart-o
-  :url:
-    :controller: campaigns
-- :active: false
-  :text: :tab_leads
-  :icon: :fa-tasks
-  :url:
-    :controller: leads
-- :active: false
-  :text: :tab_accounts
-  :icon: :fa-users
-  :url:
-    :controller: accounts
-- :active: false
-  :text: :tab_contacts
-  :icon: :fa-user
-  :url:
-    :controller: contacts
-- :active: false
-  :text: :tab_opportunities
-  :icon: :fa-money
-  :url:
-    :controller: opportunities
+#- :active: false
+#  :text: :tab_campaigns
+#  :icon: :fa-bar-chart-o
+#  :url:
+#    :controller: campaigns
+#- :active: false
+#  :text: :tab_leads
+#  :icon: :fa-tasks
+#  :url:
+#    :controller: leads
+#- :active: false
+#  :text: :tab_accounts
+#  :icon: :fa-users
+#  :url:
+#    :controller: accounts
+#- :active: false
+#  :text: :tab_contacts
+#  :icon: :fa-user
+#  :url:
+#    :controller: contacts
+#- :active: false
+#  :text: :tab_opportunities
+#  :icon: :fa-money
+#  :url:
+#    :controller: opportunities
 - :active: false
   :text: :tab_team
   :icon: :fa-globe
