--- a/config/settings.default.yml
+++ b/config/settings.default.yml
@@ -250,21 +250,21 @@
   :icon: :fa-user
   :url:
     :controller: admin/users
-- :active: true
-  :text: :admin_tab_groups
-  :icon: :fa-users
-  :url:
-    :controller: admin/groups
-- :active: false
-  :text: :admin_tab_fields
-  :icon: :fa-list-alt
-  :url:
-    :controller: admin/fields
-- :active: false
-  :text: :admin_tab_tags
-  :icon: :fa-tags
-  :url:
-    :controller: admin/tags
+#- :active: true
+#  :text: :admin_tab_groups
+#  :icon: :fa-users
+#  :url:
+#    :controller: admin/groups
+#- :active: false
+#  :text: :admin_tab_fields
+#  :icon: :fa-list-alt
+#  :url:
+#    :controller: admin/fields
+#- :active: false
+#  :text: :admin_tab_tags
+#  :icon: :fa-tags
+#  :url:
+#    :controller: admin/tags
 #- :active: false
 #  :text: :admin_tab_settings
 #  :icon: :fa-cogs
