adding contact from account

--- a/config/settings.default.yml
+++ b/config/settings.default.yml
@@ -228,11 +228,11 @@
 #  :url:
 #    :controller: leads
 
-- :active: false
-  :text: :tab_contacts
-  :icon: :fa-user
-  :url:
-    :controller: contacts
+#- :active: false
+#  :text: :tab_contacts
+#  :icon: :fa-user
+#  :url:
+#    :controller: contacts
 #- :active: false
 #  :text: :tab_opportunities
 #  :icon: :fa-money
